--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
   <head></head>
   <body>
     <br>
-    "班級:資工二甲"
+    班級:資工二甲
     <br>
     <br>
-    "學號:1111032025"
+    學號:1111032025
     <br>
     <br>
-    "姓名:劉振丞"
+    姓名:劉振丞
     <br>
     
