--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<html>
-  <head></head>
-  <body>
-    <br>
-    班級:資工二甲
-    <br>
-    <br>
-    學號:1111032025
-    <br>
-    <br>
-    姓名:劉振丞
-    <br>
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>期中個人網站</title>
+</head>
+<body>
+
+<center>
+<br>班級:資工二甲<br>
+<br>學號:1111032025<br>
+<br>姓名:劉振丞<br>
+
+</body>
+</html>
