--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
 
+
+<Embed Src="D:\vscode\Hololive Padoru【Hololive Animation】.mp3" Loop="True" AutoStart="True" Hidden=True>
+<marquee direction="right" scrollamount="30">PADORU~PADORU<img src="https://pbs.twimg.com/media/EoIUw6rVEAAGJbI.png" height="100" width="100">PADORU~PADORU</marquee>
 <center>
 <br>班級:資工二甲<br>
 <br>學號:1111032025<br>
 <br>姓名:劉振丞<br>
+<input type="button" value="HTML表格" onclick="">
 
 </body>
 </html>
