--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <br>班級:資工二甲<br>
 <br>學號:1111032025<br>
 <br>姓名:劉振丞<br>
-<input type="button" value="HTML表格" onclick="">
-
+<br>
+<input type="button" value="HTML表格" style="width:200px;height:60px; background-color:#00f7ff "  value="HTML表格" onclick="location.href='https://naicha07.github.io/WOBU/'">
+<input type="button" value="九九乘法表" style="width:200px;height:60px; background-color:#00f7ff "  value="九九乘法表" onclick="location.href='https://naicha07.github.io/eeee/'">
+<input type="button" value="DIV排版" style="width:200px;height:60px; background-color:#00f7ff "  value="DIV排版" onclick="location.href='https://naicha07.github.io/030/'">
 </body>
 </html>
