--- a/index.html
+++ b/index.html
@@ -6,16 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>期中個人網站</title>
 </head>
+<style>
+    html{
+        height: 100%;
+    }
+
+    body{
+        background-image: url(https://images8.alphacoders.com/107/1075230.png);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+        background-size: cover;
+
+    }
+</style>
 <body>
 
-<marquee direction="right" scrollamount="30">PADORU~PADORU<img src="https://pbs.twimg.com/media/EoIUw6rVEAAGJbI.png" height="100" width="100">PADORU~PADORU</marquee>
+<marquee direction="right" scrollamount="30">
+                <h1><font color=white>PADORU~PADORU</font color=white>
+                    <img src="https://pbs.twimg.com/media/EoIUw6rVEAAGJbI.png" height="100" width="100">
+                <font color=white>PADORU~PADORU</font color=white></h1>
+</marquee>
 <center>
-<br>班級:資工二甲<br>
+<h1><br><font color=white>班級:資工二甲<br>
 <br>學號:1111032025<br>
-<br>姓名:劉振丞<br>
+<br>姓名:劉振丞</font color=white><br></h1>
 <br>
-<input type="button" value="HTML表格" style="width:200px;height:60px; background-color:#00f7ff "  value="HTML表格" onclick="location.href='https://naicha07.github.io/WOBU/'">
-<input type="button" value="九九乘法表" style="width:200px;height:60px; background-color:#00f7ff "  value="九九乘法表" onclick="location.href='https://naicha07.github.io/eeee/'">
-<input type="button" value="DIV排版" style="width:200px;height:60px; background-color:#00f7ff "  value="DIV排版" onclick="location.href='https://naicha07.github.io/030/'">
+<h1><input type="button" value="HTML表格" style="width:250px;height:100px; background-color:#00f7ff "  value="HTML表格" onclick="location.href='https://naicha07.github.io/WOBU/'">
+<input type="button" value="九九乘法表" style="width:250px;height:100px; background-color:#00f7ff "  value="九九乘法表" onclick="location.href='https://naicha07.github.io/eeee/'">
+<input type="button" value="DIV排版" style="width:250px;height:100px; background-color:#00f7ff "  value="DIV排版" onclick="location.href='https://naicha07.github.io/030/'"></h1>
 </body>
 </html>
